--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -75,6 +75,16 @@ img {
     color: #fff;
 }
 
+.hero .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* horizontal */
+    text-align: center;
+    justify-content: center;
+    height: 100%; /* this refers to the amount of the page the tesxt is centered on */
+    padding: 0 20px;
+}
+
 .hero .content h1 {
     font-size: 55px;
 }
@@ -115,4 +125,22 @@ img {
     padding: 1rem; /* Relative font size */
     border-radius: 50%;
     margin-bottom: 15;
+}
+
+.text-primary {
+    color: #28a745;
+}
+
+.text-secondary {
+    color: #0284d0;
+}
+
+.btn {
+    cursor: pointer;
+    display: inline-block;
+    padding: 10px 30px;
+    color: #fff;
+    background-color: #28a745;
+    border: none;
+    border-radius: 5px; /* makes the edges curved */
 }
