--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -135,6 +135,8 @@ img {
     color: #0284d0;
 }
 
+/* Button */
+
 .btn {
     cursor: pointer;
     display: inline-block;
@@ -144,3 +146,8 @@ img {
     border: none;
     border-radius: 5px; /* makes the edges curved */
 }
+
+.btn:hover {
+    opacity: 0.7; /* Button dims whenhovered over */
+}
+
