--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -151,3 +151,22 @@ img {
     opacity: 0.7; /* Button dims whenhovered over */
 }
 
+.bg-primary {
+    color: #fff;
+    background: #28a745;
+}
+
+.bg-secondary {
+    color: #fff;
+    background: #0284d0;
+}
+
+.bg-dark {
+    color: #fff;
+    background: #333;
+}
+
+.bg-light {
+    color: #333;
+    background: #fff;
+}
