--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -193,3 +193,42 @@ img {
     flex-wrap: wrap;
     width: 100%
 }
+
+.flex-columns .column {
+    display: flex;  
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+}
+
+/* Section Headers - text in a column, in the center */
+.section-header {
+    display: flex;
+    padding: 30px;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.section-header h2 {
+    font-size: 40px;
+    margin: 20px 0;
+}
+
+.section-padding {
+    padding: 20px 20px 40px;
+}
+
+/* Flex grid -  made the images into a 2x4 table */
+.flex-grid .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.flex-grid .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0;
+}
