--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -173,6 +173,11 @@ img {
     background: #fff;
 }
 
+.btn-outline {
+    background: transparent;
+    border: 1px solid #fff;
+}
+
 /* Flex Box Details */
 /* This centralises all of the flex items in the container */
 .flex-items {
@@ -203,9 +208,35 @@ img {
 
 .flex-columns .column .column-1 ,
 .flex-columns .column .column-2 {
-    height: 100%
+    height: 100%;
 }
 
+.flex-columns .img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* This stops the image stretching weirdly */
+}
+
+.flex-columns .column-2 {
+    display: flex;  
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
+}
+
+.flex-columns h2 {
+    font-size: 40px;
+    font-weight: 100;
+}
+
+.flex-columns h4 {
+    margin-bottom: 10px;
+}
+
+.flex-columns p {
+    margin: 20px 0;
+}
 /* Section Headers - text in a column, in the center */
 .section-header {
     display: flex;
