--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -170,7 +170,7 @@ img {
 
 .bg-light, .btn-light {
     color: #333;
-    background: #fff;
+    background: #f4f4f4;
 }
 
 .btn-outline {
@@ -310,4 +310,27 @@ img {
 .callback-form .btn {
     padding: 12px 0;
     margin-top: 20px;
+}
+
+/* Footer */
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+}
+
+.footer a {
+    color: #fff;
+    padding: 10px;
+}
+
+.footer a:hover {
+    color: #28a745;
+}
+
+.footer .social {
+    margin-right: 30px;
 }
