--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -35,7 +35,7 @@ p {
 img {
     width: 100%;
 }
-
+ /* Navigation */
 .navbar {
     display: flex;
     align-items: center;
@@ -45,9 +45,11 @@ img {
     opacity: 0.8; /* Slightly  see through */
     width: 100%;
     height: 70px;
-    position: fixed;
+    /* position: fixed; */
     top: 0px;
     padding: 0 30px;
+    position: absolute;
+    right: 0px;
 }
 
 .navbar a {
@@ -70,6 +72,8 @@ img {
     line-height: 1.2;
     font-size: 55px;
 }
+/* ---------------- */
+
 
 .hero {
     background: url('../images/showcase.jpg') no-repeat center center/cover;
@@ -114,6 +118,8 @@ img {
     z-index: 10;
 }
 
+/* ---------------- */
+
 .icons { 
     padding: 30px;
 }
@@ -131,18 +137,23 @@ img {
     margin-bottom: 15px;
 }
 
-.text-primary {
-    color: #4682b4
-    ;
+.text-blue {
+    color: #4682b4;
 }
+
+.text-bold {
+    font-weight: bold;
+}
+
+
 .text-white {
     color: whitesmoke
     ;
 }
-
+/* 
 .text-secondary {
     color: #0284d0;
-}
+} */
 
 /* Button */
 
