--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,7 +76,7 @@ img {
 
 
 .hero {
-    background: url('../images/showcase.jpg') no-repeat center center/cover;
+    background: url('../images/headshot.jpg') no-repeat center center/cover;
     height: 100vh; 
     position: relative;
     color: #fff;
