--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -85,6 +85,7 @@ img {
     height: 100vh; 
     position: relative;
     color: #fff;
+    background-color: black;
 }
 
 .hero .content {
@@ -99,7 +100,7 @@ img {
 
 .hero .content h1 {
     font-size: 55px;
-    /* color: black; */
+    color: black;
 }
 
 .hero .content p {
@@ -304,7 +305,7 @@ img {
     display: flex;
     padding: 30px;
     flex-direction: column; 
-    align-items: left;
+    /* align-items: left; */
     justify-content: left;
     text-align: left;
 }
