--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,7 +43,7 @@ img {
  /* Navigation */
 .navbar {
     display: flex;
-    align-items: center;
+    align-items: right;
     justify-content: space-between;
     background-color: #333;
     color: #fff;
@@ -54,7 +54,7 @@ img {
     top: 0px;
     padding: 0 30px;
     position: absolute;
-    right: 0px;
+    right: 0px; /* nav bar colour spans all of the width */
 }
 
 .navbar a {
@@ -74,14 +74,50 @@ img {
 .narbar .logo {
     font-weight: 400;
     /* font-weight: 300; */
-    line-height: 1.2;
+    line-height: 1.5;
     font-size: 55px;
 }
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+  float: right;
+}
+.topnav-right {
+    float: right;
+  }
 /* ---------------- */
 
 
 .hero {
     background: url('../images/headshot.jpg') no-repeat center center/cover;
+    background-size: 80%;
     height: 100vh; 
     position: relative;
     color: #fff;
@@ -312,7 +348,7 @@ img {
 
 .section-header-left h1 {
     font-size: 40px;
-    margin: 20px 0;
+    margin: 0;
 }
 
 .section-padding {
