Added About Me skeleton page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -101,7 +101,7 @@ img {
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: teal;
   color: white;
 }
 
