--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -319,7 +319,118 @@ img {
 .cases img:hover {
     opacity: 0.7;
 }
+/* Flex Box Details */
+/* This centralises all of the flex items in the container */
+.flex-items {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    height: 100%;
+}
 
+/* Space between the flex items, not that > is the direct div child */
+.flex-items > div {
+    padding: 20px;
+}
+
+.flex-columns .row {
+    display: flex;  
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%
+}
+
+.flex-columns.flex-reverse .row {
+        flex-direction: row-reverse;
+}
+
+.flex-columns .column {
+    display: flex;  
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1; /* will take up the entire height */
+}
+
+.flex-columns .column .column-1 ,
+.flex-columns .column .column-2,
+.flex-columns .column .column-4 {
+    height: 100%;
+}
+
+
+/* .flex-columns .column .column-about
+{
+    height: 75%;
+} */
+.flex-columns .img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* This stops the image stretching weirdly */
+}
+
+.flex-columns .column-2,
+.flex-columns .column-about
+ {
+    display: flex;  
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
+}
+
+.flex-columns .column-75
+ {
+    display: flex;  
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    
+    padding: 30px;
+    width: 75%;
+}
+.flex-columns .column-25
+ {
+    display: flex;  
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 30px;
+    width: 25%;
+}
+
+.flex-columns h2 {
+    font-size: 40px;
+    font-weight: 100;
+}
+
+/* .flex-columns h4 {
+    margin-bottom: 10px;
+} */
+
+.flex-columns p {
+    margin: 20px 0;
+}
+/* Flex grid -  made the images into a 2x4 table */
+.flex-grid .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.flex-grid .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px ;
+}
+.flex-grid-thirds .column {
+    flex: 33%;
+    max-width: 33%;
+    padding: 0 15px ;
+}
+
+.cases img:hover {
+    opacity: 0.7;
+}
 /* Section Headers - text in a column, in the center */
 .section-header {
     display: flex;
@@ -352,10 +463,10 @@ img {
 }
 
 .section-padding {
-    padding: 20px 20px 40px;
+    padding: 20px 20px 20px;
 }
 
-.team img {
+.education img {
     border-radius: 50%;
 }
 
