--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -205,7 +205,7 @@ img {
     display: inline-block;
     padding: 10px 30px;
     color: #fff;
-    background-color: #4682b4;
+    background-color: teal;
     border: none;
     border-radius: 5px; /* makes the edges curved */
 }
@@ -487,6 +487,11 @@ img {
     padding: 20px 0;
 }
 
+.callback-form img {
+    /* width: 100%; */
+    padding:0 40px;
+    border-radius: 20%;
+} 
 .callback-form label {
     display: block;
     margin-bottom: 5px;
@@ -497,19 +502,22 @@ img {
 }
 
 .callback-form input {
-    width: 100%;
-    padding: 4px;
+    width: 80%;
+    padding: 12px 20px;
     height: 40px;
+    margin: 8px 0;
     border: #f5f5f5 1px solid;
+    resize: none;
 }
 
 .callback-form input:focus {
-    outline-color: #4682b4;
+    outline-color: teal;
 }
 
 .callback-form .btn {
-    padding: 12px 0;
+    padding: 12px 50px;
     margin-top: 20px;
+    width: 30%;
 }
 
 /* Footer */
