--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@
 @import url('https://fonts/goggleapis.com/css2?family=Open+Sans&display=swap');
 
 * {
-    box-sizing: border-box;
+    box-sizing: border-box; /* allows us to include the padding and border in an element's total width and height  */ 
     padding: 0;
     margin: 0;
 }
@@ -35,7 +35,7 @@ p {
 }
 
 img {
-    max-width: 100%; /* image will responsively shrink but not expand larger than the original */
+    max-width: 90%; /* image will responsively shrink but not expand larger than the original */
     height: auto;
 }
 
@@ -43,6 +43,7 @@ img {
 .topnav {
     background-color: #333;
     overflow: hidden;
+    height: 5%;
 }
 
 /* Style the links inside the navigation bar */
@@ -79,8 +80,8 @@ img {
 
 .hero {
     background: url('../images/headshot.jpg') no-repeat center center/cover;
-    background-size: 80%;
-    height: 100vh; 
+    background-size: 70%;
+    height: 90vh; 
     position: relative;
     color: #fff;
     background-color: black;
@@ -92,7 +93,7 @@ img {
     align-items: center; /* horizontal */
     text-align: center;
     justify-content: center;
-    height: 100%; /* this refers to the amount of the page the tesxt is centered on */
+    height: 90%; /* this refers to the amount of the page the tesxt is centered on */
     padding: 0 20px;
 }
 
@@ -449,12 +450,13 @@ img {
 
 /* Footer */
 .footer {
+    height: 5%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 200px;
+    align-items: right;
+    justify-content: right;
+    text-align: right;
+    padding-top: 5px;
 }
 
 .footer a {
@@ -463,7 +465,7 @@ img {
 }
 
 .footer a:hover {
-    color: #4682b4;
+    color: teal;
 }
 
 .footer .social {
@@ -477,11 +479,13 @@ img {
   
   .image {
     display: block;
-    width: 100%;
-    height: auto;
+    /* width: 100%; */
+    /* height: auto; */
+    height: 90%;
+    width: auto;
   }
   
-  .overlay {
+  /* .overlay {
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -496,7 +500,7 @@ img {
   .container:hover .overlay {
     width: 100%;
     left: 0;
-  }
+  } */
   
   .text {
     white-space: nowrap; 
